# Benchmark_GPU

./: .gitignore  HOWTO.md  README.md  requirements-convert.txt
bench/: CMakeLists.txt  bench_mnn.cpp  bench_tflite.cpp  common.h  report.cpp
examples/configs/: mnn_opencl_fp16.json  tflite_from_onnx.json  tflite_gpu_fp16.json  tflite_xnnpack.json
results/: REPORT.md
scripts/: cfg.py  convert_onnx_to_tflite.py  make_input_bin.py  run_bench.sh  run_sweep.sh
